--- a/App.Web/Views/DoctorPole/Dashboard.cshtml
+++ b/App.Web/Views/DoctorPole/Dashboard.cshtml
@@ -332,7 +332,7 @@
                                             <td>@Model.TotalDeath</td>
                                         </tr>
                                         <tr>
-                                            <th>Test Pending</th>
+                                            <th>Test Pending (Suspected)</th>
                                             <td>@Model.TotalTestPending</td>
                                         </tr>
 
