--- a/App.Web/Views/Main/Index.cshtml
+++ b/App.Web/Views/Main/Index.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = "COVID Response";
     Layout = "~/Views/Shared/_LayoutBrac.cshtml";
     ViewBag.page = "main";
+    ViewBag.layoutTop = false;
+    ViewBag.layoutLeft = true;
 }
 <link href="~/Content/css/brac/bootstrap-legacy.css" rel="stylesheet" />
 <div class="row-fluid">
