--- a/App.Web/Views/Report/Index.cshtml
+++ b/App.Web/Views/Report/Index.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutBrac.cshtml";
     ViewBag.page = "report";
+    ViewBag.layoutTop = true;
+    ViewBag.layoutLeft = false;
 }
 <h2 class="page-header-title text-bracify">Circulars & SitReps</h2>
 <div class="row" id="report-accordion">
