--- a/App.Web/Views/WorkstationLeaveQuarantine/Index.cshtml
+++ b/App.Web/Views/WorkstationLeaveQuarantine/Index.cshtml
@@ -302,7 +302,7 @@
             , true
         );
         $(".sidebar-item").removeClass("active");
-        $("#total_survey").addClass("active");
+        $("#quirentine_leave").addClass("active");
         $("#tebular").addClass("active");
         });
     </script>
