--- a/App.Web/Views/DoctorPole/FollowupIndex.cshtml
+++ b/App.Web/Views/DoctorPole/FollowupIndex.cshtml
@@ -2,7 +2,7 @@
 @using AppProj.Web;
 @model AppProj.Web.Models.SearchModel
 @{
-    Layout = "~/Views/Shared/_LayoutGeneral.cshtml";
+    Layout = "~/Views/Shared/_LayoutBrac.cshtml";
     var ajaxOpt = new AjaxOptions
     {
         HttpMethod = "POST",
@@ -14,152 +14,264 @@
     };
 }
 
-<section id="formElement" class="utopia-widget utopia-form-box section">
-    <div class="utopia-widget-title">
-        <img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-widget-icon utopia-icons2-small-img"> 
-        <span class="textPrimary">Tele Consultancy</span>
+<style type="text/css">
+    .multiselect {
+        width: 200px;
+    }
 
-        <span class="textPrimary" id="iTotalRecords" style="float:right; padding-right:10px;">0</span>
-        <span class="textPrimary" style="float:right;">Total Records: </span>
+    .selectBox {
+        position: relative;
+    }
+
+        .selectBox select {
+            width: 100%;
+            font-weight: normal;
+            background-color: #f4f5f5;
+            border: 0px;
+        }
+
+    .overSelect {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+    }
+
+    #checkboxes {
+        display: none;
+        border: 1px #dadada solid;
+    }
+
+        #checkboxes label {
+            display: block;
+        }
+
+            #checkboxes label:hover {
+                background-color: #1e90ff;
+            }
+</style>
+
+
+<div class="page-header">
+    <h2>Tele Consultancy</h2>
+    <div class="btn-group" role="group" aria-label="Basic example">
+        <a id="exp" href="#" class="btn btn-blank btn-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="13.425" height="11.935" viewBox="0 0 13.425 11.935"> <path id="export" d="M8.951,2.842a.558.558,0,0,0-.163-.394L6.506.163A.559.559,0,0,0,6.11,0H5.967V2.984H8.951ZM13.31,7.18,11.079,4.932a.374.374,0,0,0-.639.263V6.713H8.949V8.205h1.492v1.52a.374.374,0,0,0,.639.263L13.31,7.739A.4.4,0,0,0,13.31,7.18Zm-8.834.653V7.086a.374.374,0,0,1,.373-.373h4.1V3.73H5.781a.561.561,0,0,1-.559-.559V0H.559A.558.558,0,0,0,0,.559V11.375a.558.558,0,0,0,.559.559H8.392a.558.558,0,0,0,.559-.559V8.205h-4.1A.374.374,0,0,1,4.476,7.832Z" fill="#d10d74" /></svg>
+            <span>Export</span>
+        </a>
+        <a id="prn" href="#" class="btn btn-blank btn-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="12.959" height="11.663" viewBox="0 0 12.959 11.663"> <path id="print" d="M14.015,7.74H4.944A1.941,1.941,0,0,0,3,9.684v3.888H5.592v2.592h7.775V13.571h2.592V9.684A1.941,1.941,0,0,0,14.015,7.74Zm-1.944,7.127H6.888v-3.24h5.184Zm1.944-4.536a.648.648,0,1,1,.648-.648A.65.65,0,0,1,14.015,10.331ZM13.367,4.5H5.592V7.092h7.775Z" transform="translate(-3 -4.5)" fill="#d10d74" /></svg>
+            <span>Print</span>
+        </a>
+
     </div>
+</div>
 
-    <div class="row-fluid">
-        <div class="utopia-widget-content">
-            <div class="span2 utopia-form-freeSpace">
-                <fieldset>
-                    <div class="control-group ">
-                        <label class="control-label" for="ContentTypeId1"> Program:</label>
-                        <div class="controls">
-                            @Html.DropDownListFor(model => model.ContentTypeId1, Model.ContentTypes1, "All Programs", new { @class = "span12 ddl" })
+<div class="table-responsive">
+    <div id="data_table_wrapper" class="dataTables_wrapper dt-bootstrap4 no-footer">
+        <div class="dt_top">
+            <div class="dt_toolbar">
+                <div class="dt_toolbar">
+                    <svg class="toggle-trigger" xmlns="http://www.w3.org/2000/svg" width="22" height="20.2" viewBox="0 0 22 20.2">
+                        <g id="filter" transform="translate(-1 -2.5)" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M21,4.5H3l7.2,8.514V18.9l3.6,1.8V13.014Z" stroke="none"></path>
+                            <path d="M 3.000003814697266 4.500005722045898 L 10.19999313354492 13.01399612426758 L 10.19999313354492 18.89999771118164 L 13.79999351501465 20.69998550415039 L 13.79999351501465 13.01399612426758 L 20.9999828338623 4.500005722045898 L 3.000003814697266 4.500005722045898 M 3.000003814697266 2.500005722045898 L 20.9999828338623 2.500005722045898 C 21.77863311767578 2.500005722045898 22.48650360107422 2.951927185058594 22.81422424316406 3.658256530761719 C 23.14193344116211 4.36457633972168 23.0299129486084 5.196907043457031 22.52712249755859 5.79145622253418 L 15.79999351501465 13.74628925323486 L 15.79999351501465 20.69998550415039 C 15.79999351501465 21.39313697814941 15.44109344482422 22.0368766784668 14.85145378112793 22.40128707885742 C 14.53029537200928 22.59977340698242 14.1655740737915 22.69998741149902 13.79989337921143 22.69998741149902 C 13.49420356750488 22.69998741149902 13.18785953521729 22.6299877166748 12.90557289123535 22.48884582519531 L 9.305573463439941 20.68885612487793 C 8.628003120422363 20.35006713867188 8.199993133544922 19.65754699707031 8.199993133544922 18.89999771118164 L 8.199993133544922 13.74628925323486 L 1.472864151000977 5.79145622253418 C 0.9700736999511719 5.196907043457031 0.8580532073974609 4.36457633972168 1.185762405395508 3.658256530761719 C 1.513483047485352 2.951927185058594 2.221353530883789 2.500005722045898 3.000003814697266 2.500005722045898 Z" stroke="none" fill="#c9d600"></path>
+                        </g>
+                    </svg>
+                    <span class="toggle-trigger">Search By Filter</span>
+                    <svg class="dt-carret toggle-trigger" xmlns="http://www.w3.org/2000/svg" width="13.248" height="6.624" viewBox="0 0 13.248 6.624">
+                        <path d="M10.5,15l6.624,6.624L23.748,15Z" transform="translate(-10.5 -15)" fill="#D10D74"></path>
+                    </svg>
+                </div>
+            </div>
+            <div class="dataTables_info" id="data_table_info" role="status" aria-live="polite">
+                Total Records
+                <strong id="iTotalRecords" class="text-bracify">
 
+                </strong>
+            </div>
+        </div>
+        <div class="tnav" style="">
+            <div class="table-filter-nav">
+                <div class="filter-item">
+                    <label for="info_source">Program:</label>
+                    @Html.DropDownListFor(model => model.ContentTypeId1, Model.ContentTypes1, "All Programs", new { @class = "searchable-dropdown form-control" })
+
+                </div>
+
+                <div class="filter-item">
+                    <label for="filter_district">Division:</label>
+                    @Html.DropDownListFor(model => model.ContentTypeId2, Model.ContentTypes2, "All Divisions", new { @class = "searchable-dropdown form-control" })
+
+                </div>
+
+                <div class="filter-item">
+                    <label for="districts">District :</label>
+                    @Html.DropDownListFor(model => model.ContentTypeId3, Model.ContentTypes3, "All Districts", new { @class = "searchable-dropdown form-control" })
+                </div>
+                <div class="filter-item">
+                    <label for="districts">Options :</label>
+                    <div class="multiselect searchable-dropdown form-control">
+                        <div class="selectBox" onclick="showCheckboxes()">
+                            <select>
+                                <option>Select an option</option>
+                            </select>
+                            <div class="overSelect"></div>
                         </div>
-                    </div>
-                </fieldset>
-            </div>
-            <div class="span2 utopia-form-freeSpace">
-                <fieldset>
-                    <div class="control-group ">
-                        <label class="control-label" for="ContentTypeId2">Division:</label>
-                        @Html.DropDownListFor(model => model.ContentTypeId2, Model.ContentTypes2, "All Divisions", new { @class = "span12 ddl" })
-
-                    </div>
-                </fieldset>
-
-            </div>
-            <div class="span2 utopia-form-freeSpace">
-                <fieldset>
-                    <div class="control-group ">
-                        <label class="control-label" for="ContentTypeId3"> District :</label>
-                        <div class="controls">
-                            @Html.DropDownListFor(model => model.ContentTypeId3, Model.ContentTypes3, "All Districts", new { @class = "span12 ddl" })
-
-                        </div>
-                    </div>
-                </fieldset>
-            </div>
-            <div class="span4 utopia-form-freeSpace">
-                <fieldset>
-                    <div class="control-group">
-                        <label class="control-label" for="select01">
-                            &nbsp;
-                        </label>
-                        <div class="controls">
+                        <div class="controls" id="checkboxes">
                             @for (int i = 0; i < Model.StatusList.Count(); i++)
                             {
-                                @Html.CheckBoxFor(model => model.StatusList[i].Selected, new { @style = "margin-left:20px; margin-right:5px;", @class = "statusChk" })
-                                @Html.DisplayFor(model => model.StatusList[i].Text)
+
+                                <label for="@i">
+                                    @Html.CheckBoxFor(model => model.StatusList[i].Selected, new { @style = "", @class = "statusChk" })@Html.DisplayFor(model => model.StatusList[i].Text)
+                                </label>
+
                                 @Html.HiddenFor(model => model.StatusList[i].Value)
                                 @Html.HiddenFor(model => model.StatusList[i].Text)
 
                             }
-                            <input type="hidden" id="StatusIds" value="" />
+                            <label for="StatusList_99__Selected">
+                                <input style="margin-right:5px;" id="StatusList_99__Selected" name="StatusList_99__Selected" class="statusChk" type="checkbox" checked="checked" /><span style="color:#4800ff">Only Staff</span>
+                                <input id="StatusList_99__Value" name="StatusList[99].Value" type="hidden" value="-1">
+                            </label>
 
-                            <input style="margin-left:20px; margin-right:5px;" id="StatusList_99__Selected" name="StatusList_99__Selected" class="statusChk" type="checkbox" checked="checked" /><span style="color:#4800ff">Only Staff</span>
-                            <input id="StatusList_99__Value" name="StatusList[99].Value" type="hidden" value="-1">
-
-                            <a id="dateSearchButton" class="btn btn-info"><i class="icon icon-search icon-white"></i></a>
                         </div>
                     </div>
-                </fieldset>
-            </div>
-            <div class="span2 utopia-form-freeSpace">
-                <fieldset>
-                    <div class="control-group">
-                        @if (UserRole.Check("DoctorPool_Doc", SessionHelper.Role))
-                        {
-                            @Ajax.ActionLink("New Call", "Create", "DoctorsPole", ajaxOpt, new { @class = "btn btn-danger pull-right" })
-                        }
-                        
-                        <a id="prn" href="#" class="btn"><i class="icon icon-print"></i> Print</a>
-                        <a id="exp" href="#" class="btn"><i class="icon icon-download"></i> Export</a>
+
+                </div>
+
+                <div class="filter-item">
+                    <button id="dateSearchButton" class="btn btn-bracify search">
+                        <span>Search</span>
+                        <img src="@Url.Content("~/Content/src/images/svg/tabular-data/search.svg")" alt="Search">
+                    </button>
+                </div>
+                @*<div class="span4 utopia-form-freeSpace">
+            <fieldset>
+                <div class="control-group">
+                    <label class="control-label" for="select01">
+                        &nbsp;
+                    </label>
+
+
+
+
+                    <div class="controls">
+
+
+
+
+
+                        <input type="hidden" id="StatusIds" value="" />
+
+                        <input style="margin-left:20px; margin-right:5px;" id="StatusList_99__Selected" name="StatusList_99__Selected" class="statusChk" type="checkbox" checked="checked" /><span style="color:#4800ff">Only Staff</span>
+                        <input id="StatusList_99__Value" name="StatusList[99].Value" type="hidden" value="-1">
+
+
+                        <button id="dateSearchButton" class="btn btn-bracify search">
+
+                            <img src="@Url.Content("~/Content/src/images/svg/tabular-data/search.svg")" alt="Search">
+                        </button>
 
                     </div>
-                </fieldset>
+                </div>
+            </fieldset>
+        </div>*@
+                <input type="hidden" id="StatusIds" value="" />
+                <input type="hidden" id="onlyPatient" value="false" />
+
+
+
+
+
+
             </div>
         </div>
-    </div>
-</section>
-
-<table id="gridTable" class="table table-striped table-bordered fixed_headers">
-    <thead>
-        <tr>
-            <th>
-                Who is
-            </th>
-            <th>
-                PIN
-            </th>
-            <th>
-                Name
-            </th>
-            <th>
-                Mobile
-            </th>
-            <th>
-                B/G
-            </th>
-            <th>
-                Age
-            </th>
-            <th>
-                Sex
-            </th>
-            <th>
-                Designation
-            </th>
-            <th>
-                Program/Project
-            </th>
-            <th>
-                Distrrict
-            </th>
-            <th>
-                Area
-            </th>
-            <th>
-                Hospital/Isolation
-            </th>
-            <th>
-                Alternate Contact
-            </th>
-            <th>
-                Next Followup
-            </th>
-            @*<th>
-            Counseling by
-        </th>
-        <th>
-            Last Counseling at
-        </th>*@
-            @if (UserRole.Check("DoctorPool_Doc", SessionHelper.Role)
-                || UserRole.Check("DoctorPool_Suspect", SessionHelper.Role)
-                || UserRole.Check("DoctorPool_Council", SessionHelper.Role))
+        <div class="custom-add">
+            @if (UserRole.Check("DETAIL", SessionHelper.Role))
             {
-                <th></th>
+                @Ajax.ActionLink("New Call", "Create", "DetailSubmission", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-bracify-add" })
             }
-        </tr>
-    </thead>
-</table>
+        </div>
+        <table id="gridTable" class="table table-striped table-bordered fixed_headers">
+            <thead class="thead-yellow">
+                <tr>
+                    <th>
+                        Who is
+                    </th>
+                    <th>
+                        PIN
+                    </th>
+                    <th>
+                        Name
+                    </th>
+                    <th>
+                        Mobile
+                    </th>
+                    <th>
+                        B/G
+                    </th>
+                    <th>
+                        Age
+                    </th>
+                    <th>
+                        Sex
+                    </th>
+                    <th>
+                        Designation
+                    </th>
+                    <th>
+                        Program/Project
+                    </th>
+                    <th>
+                        Distrrict
+                    </th>
+                    <th>
+                        Area
+                    </th>
+                    <th>
+                        Hospital/Isolation
+                    </th>
+                    <th>
+                        Alternate Contact
+                    </th>
+                    <th>
+                        Next Followup
+                    </th>
+                    @*<th>
+                            Counseling by
+                        </th>
+                        <th>
+                            Last Counseling at
+                        </th>*@
+                    @if (UserRole.Check("DoctorPool_Doc", SessionHelper.Role)
+                        || UserRole.Check("DoctorPool_Suspect", SessionHelper.Role)
+                        || UserRole.Check("DoctorPool_Council", SessionHelper.Role))
+                    {
+                        <th></th>
+                    }
+                </tr>
+            </thead>
+        </table>
+
+
+
+
+
+
+    </div>
+
+
+
+
+
+
+
+</div>
+
+
+
 
 @section scripts{
     <script type="text/javascript">
@@ -241,7 +353,23 @@
         , btns   //buttons are at these columns
         , true
         );
+        $(".sidebar-item").removeClass("active");
+        $("#tele_consultancy").addClass("active");
+        $("#telemedicine").css("display", "block");
+
 
     });
+        var expanded = false;
+
+        function showCheckboxes() {
+            var checkboxes = document.getElementById("checkboxes");
+            if (!expanded) {
+                checkboxes.style.display = "block";
+                expanded = true;
+            } else {
+                checkboxes.style.display = "none";
+                expanded = false;
+            }
+        }
     </script>
 }
