--- a/App.Web/Views/DoctorPole/Dashboard.cshtml
+++ b/App.Web/Views/DoctorPole/Dashboard.cshtml
@@ -308,7 +308,7 @@
 
                                     <tbody>
                                         <tr>
-                                            <th>Total Cases</th>
+                                            <th>Total Suspected Cases</th>
                                             <td>@Model.TotalCases</td>
                                         </tr>
                                         <tr>
